--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,7 @@ font-weight: 400;
     width: 100%;
     height: 500px;
     background-image:linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(../Images/Group\ 13\ \(1\)\ \(1\).png);
+    background-repeat: no-repeat;
     padding:106px 0;
     text-align: center;
 }
@@ -121,4 +122,92 @@ font-weight: 400;
     font-size: 16px;
     font-weight: 700;
     }
+
+
+/* Popular Tour Section */
+.popular-tour{
+    width: 100%;
+    margin: 100px 0;
+}
+
+.popular-tour-wrapper{
+    display: flex;
+    align-items: center;
+    gap: 53px;
+}
+
+.popular-tour-content{
+    font-family: "Mulish", sans-serif;
+
+}
+
+.popular-tour-content h2{
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.popular-tour-content p{
+    margin-bottom: 24px;
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.popular-tour-content ul{
+    padding-left: 20px;
+}
+
+.popular-tour-content li{
+    margin-bottom: 16px;
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 16px;
+    font-weight: 400;
+
+}
+
+.popular-tour-image img{
+
+}
+
+
+/* Destination Section Styles */
+.destination-section{
+    width: 100%;
+    margin: 100px 0;
+
+}
+.destination-content{
+    margin-bottom: 48px;   
+}
+
+.destination-images{
+    display: flex;
+    flex-wrap:wrap ;
+}
+
+.destination-name{
+    position: relative;
+    text-align: center;
+}
+
+.destination-name img{
+    width: 100%;
+    border-radius: 16px;
+    background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+
+.destination-name span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FFF;
+    text-align: center;
+    font-family: "Mulish", sans-serif;
+    font-size: 28px;
+    font-weight: 800;
+}
+
 
