Why choose us section design and cotent added in footer section

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -71,6 +71,11 @@
     width: 174px;
 }
 
+/* destination */
+.image-row{
+    flex-direction: column;
+}
+
 /* Newsletter */
 
 .newsletter-wrapper{
