--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -83,9 +83,24 @@
 }
 
 
+/* footer Section */
+.footer{
+    width: 100%;
+    padding: 0 44px;
+}
 
+.footer-content p{
+    margin: 16px 0;
+}
 
+.social-icon img{
+    padding-right: 20px;
 
+}
+
+hr{
+    margin: 24px 0;
+}
 
 
 
