--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,7 @@ font-weight: 400;
 }
 
 .subscription-form{
+    width: 474px;
     padding: 40px;
     border-radius: 16px;
     border: 1px solid #FF5400;
@@ -327,6 +328,10 @@ font-weight: 400;
     position: relative;
 }
 
+.promo-banner img{
+    width: 100%;
+    height: 100%;
+}
 .sticker{
     width: 324px;
     height: 120px;
@@ -336,8 +341,8 @@ font-weight: 400;
     text-align: center;
     position: absolute;
     transform: rotate(-19.628deg);
-    top: 50%;
-    left: 50%;
+    top: 64%;
+    left: 40%;
 
 }
 
@@ -359,7 +364,15 @@ font-weight: 800;
     width: 100%;
     max-width: 992px;
     background: rgba(19, 19, 24, 0.05);
-    margin: 0 auto;
+    margin: 0 auto 100px auto;
+}
+
+.footer-content{
+    padding-top: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-logo{
@@ -378,4 +391,30 @@ margin: 0;
 
 .footer-logo h2 span{
     color: #FF5400;
+}
+
+.footer-content p{
+    margin-top: 16px;
+    margin-bottom: 32px;
+    text-align: center;
+    max-width: 769px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.social-icon img{
+    padding-right: 32px;
+
+}
+
+hr{
+    background: rgba(19, 19, 24, 0.10);
+    margin: 50px 0;
+    width: 100%;
+}
+
+.copyright{
+    margin: 0;
 }
