--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,25 @@ font-weight: 400;
     margin-bottom: 48px;   
 }
 
+.destination-content h2{
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+
+.destination-content span{
+    color: #FF5400;
+}
+
+.destination-content p{
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
 .image-row{
     display: flex;
     gap: 24px;
@@ -242,10 +261,24 @@ font-weight: 400;
 
 .card-items{
     border-radius: 16px;
-    border: 5px solid rgba(251, 181, 99, 0.50);
+    border: 1px solid rgba(251, 181, 99, 0.50);
     background: rgba(251, 181, 99, 0.05);
     text-align: left;
     padding: 32px;
+}
+
+.card-items h3{
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    margin: 24px 0 16px 0;
+}
+
+.card-items p{
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
 }
 
 .item-3{
