--- a/styles/style.css
+++ b/styles/style.css
@@ -232,9 +232,6 @@ font-weight: 400;
 
 
 /* Choose us Section styles */
-.choose-us-section{
-    font-family: "Mulish", sans-serif;
-}
 
 .choose-us-content h2{
     color: #131318;
@@ -287,7 +284,79 @@ font-weight: 400;
     margin:0 210px ;
 }
 
+/* Perfect Place Section Styles */
 
+.perfect-place{
+    width: 100%;
+    margin-top: 100px;
+}
+
+.perfect-place-wrapper{
+    display: flex;
+    gap: 28px;
+}
+
+.perfect-place-content{
+    max-width: 448px;
+}
+
+.perfect-place-content h2{
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 60px;
+    margin-bottom: 24px;
+}
+
+.perfect-place-content p{
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+
+.perfect-place-content ul{
+    margin-left: 24px;
+}
+
+.perfect-place-content li{
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.perfect-place-button{
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    font-family: "Mulish", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 32px;
+}
+
+.perfect-place-video{
+    position: relative;
+}
+
+.perfect-place-video video{
+    width: 100%;
+    height: 100%;
+}
+
+.perfect-place span{
+    position: absolute;
+    transform: translate(-50%, -50%);
+    color:#FFF;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+}
 
 
 /* Newsletter Section Styles */
