--- a/styles/style.css
+++ b/styles/style.css
@@ -284,6 +284,8 @@ font-weight: 400;
     margin:0 210px ;
 }
 
+
+
 /* Perfect Place Section Styles */
 
 .perfect-place{
@@ -358,6 +360,60 @@ font-weight: 400;
     line-height: 36px;
 }
 
+/* Testimonial Section */
+.testimonial-section{
+    width: 100%;
+    margin-top: 100px;
+}
+
+.testimonial-content{
+    text-align: center;
+    padding-bottom: 32px;
+}
+
+
+.testimonial-content h2{
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    margin-bottom: 16px;
+}
+
+.testimonial-content span{
+    color: #FF5400;
+}
+
+.testimonial-wrapper{
+    display: flex;
+    gap: 24px;
+}
+
+.testimonial{
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    text-align: center;
+    padding: 24px;
+}
+
+.testimonial h4{
+    font-size: 24px;
+    font-weight: 600;
+    margin: 10px 0;
+    color: #FF5400;
+}
+
+.testimonial p{
+    text-align: center;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+
+.rating{
+    color:#FF5400;
+}
 
 /* Newsletter Section Styles */
 
